# Vestige

./: .gitignore  CLAUDE.md  CODESTYLE.md  Cargo.toml  README.md  release-plz.toml  vestige_prd.md
.agents/skills/vestige-review/: SKILL.md
.claude/: settings.json
.claude/hooks/: check-claude-md-drift.sh
.github/workflows/: ci.yml  release-plz.yml  release-tap.yml
.vestige/: config.toml
Formula/: vestige.rb
app/Vestige-Mac/: .gitignore  README.md
app/Vestige-Mac/Vestige/: ProjectRow.swift  StatusFileWatcher.swift  VestigeApp.swift
app/Vestige-Mac/scripts/: build-app.sh
crates/vestige-cli/: CHANGELOG.md  Cargo.toml  skills
crates/vestige-cli/src/: context.rs  main.rs  output.rs
crates/vestige-cli/src/commands/: approve.rs  candidate.rs  capture.rs  context.rs  decision.rs  embed.rs  embeddings.rs  forget.rs  inbox.rs  init.rs  list.rs  mcp.rs  mod.rs  note.rs  preference.rs  question.rs  recall.rs  record.rs  reindex.rs  reject.rs  remember.rs  restore.rs  scan.rs  search.rs  search_shared.rs  show.rs  skills.rs  sources.rs  status.rs  trace.rs  ui.rs  why.rs
crates/vestige-cli/src/commands/browse/: app.rs  input.rs  mod.rs  terminal.rs  ui.rs
crates/vestige-cli/src/commands/browse/tabs/: candidates.rs  memories.rs  mod.rs  tail.rs  traces.rs
crates/vestige-cli/src/commands/daemon/: doctor.rs  install.rs  ipc_client.rs  kick.rs  log.rs  mod.rs  pause.rs  restart.rs  resume.rs  start.rs  status.rs  stop.rs  uninstall.rs
crates/vestige-cli/src/skills/: bundle.rs  mod.rs
crates/vestige-cli/templates/: com.vestige.daemon.plist.tmpl
crates/vestige-cli/tests/: browse_tail.rs  daemon_smoke.rs  m1_smoke.rs  m3_smoke.rs  m4_smoke.rs  m5_smoke.rs  m6_embed_smoke.rs  m7_hybrid_smoke.rs  m8_mcp_modes.rs  m9_config_wiring_smoke.rs  m9_inbox_smoke.rs  search_default_mode_smoke.rs  skills_install.rs  v03_provenance_smoke.rs  v03_trace_replay_smoke.rs  v03_trace_smoke.rs  v04_browse_smoke.rs  v054_scan_smoke.rs
crates/vestige-config/: CHANGELOG.md  Cargo.toml
crates/vestige-config/src/: identity.rs  lib.rs  paths.rs  schema.rs
crates/vestige-core/: CHANGELOG.md  Cargo.toml
crates/vestige-core/src/: candidate.rs  context.rs  error.rs  ids.rs  ingest.rs  lib.rs  memory.rs  redaction.rs  representations.rs  types.rs
crates/vestige-core/src/memory/: bundle.rs  mod.rs  projection.rs  scoring.rs  search.rs
crates/vestige-daemon/: Cargo.toml
crates/vestige-daemon/src/: errors.rs  lib.rs  lifecycle.rs  opts.rs  plist.rs  registry.rs  scheduler.rs  workers.rs
crates/vestige-daemon/src/ipc/: methods.rs  mod.rs  server.rs  status_file.rs
crates/vestige-daemon/src/jobs/: candidate_ttl.rs  embed_sweep.rs  mod.rs  session_log_scan.rs  trace_prune.rs
crates/vestige-daemon/tests/: embed_sweep_integration.rs  ipc_integration.rs  scheduled_tick_integration.rs
crates/vestige-embed/: CHANGELOG.md  Cargo.toml
crates/vestige-embed/src/: error.rs  factory.rs  fake.rs  fastembed.rs  lib.rs  ollama.rs  provider.rs
crates/vestige-embed/tests/: fastembed_smoke.rs  integration.rs  ollama_smoke.rs
crates/vestige-engine/: CHANGELOG.md  Cargo.toml
crates/vestige-engine/src/: candidate.rs  context.rs  embed.rs  error.rs  lib.rs  provenance.rs  replay.rs  search.rs  trace.rs  trace_read.rs
crates/vestige-engine/src/ingest/: claude_code.rs  codex.rs  mod.rs  scan.rs  source.rs
crates/vestige-engine/tests/: candidate_promotion.rs  embed.rs  replay.rs  search.rs  trace.rs
crates/vestige-extract/: Cargo.toml
crates/vestige-extract/src/: anthropic.rs  error.rs  factory.rs  fake.rs  lib.rs  ollama.rs  openai.rs  prompt.rs  provider.rs
crates/vestige-mcp/: CHANGELOG.md  Cargo.toml
crates/vestige-mcp/src/: lib.rs  server.rs
crates/vestige-mcp/src/tools/: bootstrap.rs  expand.rs  get_candidate.rs  list_candidates.rs  mod.rs  project_context.rs  propose_candidate.rs  record_decision.rs  record_observation.rs  scan_sessions.rs  search.rs  trace.rs
crates/vestige-mcp/tests/: candidate_tools.rs  provenance_trace_tools.rs  scan_sessions_tools.rs  search_modes.rs
crates/vestige-store/: CHANGELOG.md  Cargo.toml
crates/vestige-store/src/: embeddings.rs  helpers.rs  lib.rs  memory_ops.rs  project.rs  provenance.rs  scan_ops.rs  trace_ops.rs
crates/vestige-store/src/candidate_ops/: fetch.rs  lifecycle.rs  list_search.rs  mod.rs  record.rs
crates/vestige-store/src/embeddings/: jobs.rs  mod.rs  nearest.rs  record.rs  status.rs
crates/vestige-store/src/memory_ops/: fetch.rs  lifecycle.rs  list_search.rs  mod.rs  record.rs
crates/vestige-store/src/migrations/: 0001_init.sql  0002_fts.sql  0003_embeddings.sql  0004_candidates.sql  0005_provenance.sql  0006_session_scan_cursors.sql
crates/vestige-store/tests/: candidate_lifecycle.rs  embedding_helpers.rs  embedding_schema.rs  fts_lifecycle.rs  provenance_migration.rs  recent_memories.rs  scan_cursor.rs  vector_lifecycle.rs
docs/: README.md  index.html  styles.css  tokens.css  v0.2.md  v0.3.md  v0.4-tail.md  v0.4.md  v0.5.2.md  v0.5.4.md  v0.5.md
docs/prd/: vestige_prd.md  vestige_v_0_1_embeddings_prd.md  vestige_v_0_2_assimilation_inbox_prd.md  vestige_v_0_3_provenance_prd.md  vestige_v_0_4_browser_prd.md  vestige_v_0_5_2_menubar_controls_prd.md  vestige_v_0_5_3_session_log_ingestion_prd.md  vestige_v_0_5_daemon_prd.md
docs/src/: app.jsx  data.js  diagrams.jsx  interactive.jsx  sections.jsx
skills/vestige/: README.md
skills/vestige/vestige-auto-memorise/: SKILL.md
skills/vestige/vestige-context/: SKILL.md
skills/vestige/vestige-forget/: SKILL.md
skills/vestige/vestige-recall/: SKILL.md
skills/vestige/vestige-record-decision/: SKILL.md
skills/vestige/vestige-record-note/: SKILL.md
skills/vestige/vestige-record-preference/: SKILL.md
skills/vestige/vestige-record-question/: SKILL.md
skills/vestige/vestige-restore/: SKILL.md
skills/vestige/vestige-scan-sessions/: SKILL.md
skills/vestige/vestige-show/: SKILL.md
skills/vestige/vestige-sources/: SKILL.md
skills/vestige/vestige-trace-list/: SKILL.md
skills/vestige/vestige-trace-replay/: SKILL.md
skills/vestige/vestige-why/: SKILL.md
(+42 files in other folders)
