[workspace]
resolver = "2"
members = [
    "crates/vestige-core",
    "crates/vestige-store",
    "crates/vestige-config",
    "crates/vestige-cli",
    "crates/vestige-mcp",
    "crates/vestige-embed",
    "crates/vestige-engine",
]

[workspace.package]
version = "0.2.4"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/conorluddy/Vestige"
homepage = "https://github.com/conorluddy/Vestige"
authors = ["Conor Luddy"]
keywords = ["mcp", "memory", "agents", "claude", "sqlite"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Internal — version is what crates.io uses; path is what local builds use.
vestige-core = { path = "crates/vestige-core", version = "0.2.4" }
vestige-store = { path = "crates/vestige-store", version = "0.2.4" }
vestige-config = { path = "crates/vestige-config", version = "0.2.4" }
vestige-mcp = { path = "crates/vestige-mcp", version = "0.2.4" }
vestige-embed = { path = "crates/vestige-embed", version = "0.2.4" }
vestige-engine = { path = "crates/vestige-engine", version = "0.2.4" }

# External
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ulid = { version = "1", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
sha2 = "0.10"
hex = "0.4"
directories = "5"
fastembed = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tempfile = "3"
rmcp = { version = "0.16", features = ["server", "transport-io"] }
schemars = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
