[package]
name = "vestige"
description = "Local-first, repo-pinned memory layer for coding agents. CLI + MCP server over a SQLite store. No daemon."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
include = [
    "src/**",
    "tests/**",
    "Cargo.toml",
    "../../README.md",
    "../../CHANGELOG.md",
    "skills/README.md",
    "skills/vestige-auto-memorise/**",
    "skills/vestige-context/**",
    "skills/vestige-forget/**",
    "skills/vestige-recall/**",
    "skills/vestige-record-decision/**",
    "skills/vestige-record-note/**",
    "skills/vestige-record-preference/**",
    "skills/vestige-record-question/**",
    "skills/vestige-restore/**",
    "skills/vestige-show/**",
]

[[bin]]
name = "vestige"
path = "src/main.rs"

[dependencies]
vestige-core.workspace = true
vestige-store.workspace = true
vestige-config.workspace = true
vestige-embed.workspace = true
vestige-engine.workspace = true
vestige-mcp.workspace = true
tokio.workspace = true
clap.workspace = true
include_dir.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
ulid.workspace = true
ratatui = "0.30"

[features]
default = []
fastembed = ["vestige-embed/fastembed"]
ollama = ["vestige-embed/ollama"]

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
toml.workspace = true
