[package]
name = "vestige"
description = "Vestige CLI — repo-pinned memory layer for coding agents. Local-first SQLite store + MCP server + optional opt-in daemon for scheduled embedding sweeps, trace VACUUM, and per-project candidate TTL."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
include = [
    "src/**",
    "tests/**",
    "Cargo.toml",
    "../../README.md",
    "../../CHANGELOG.md",
    "skills/**",
]

[[bin]]
name = "vestige"
path = "src/main.rs"

[dependencies]
vestige-core.workspace = true
vestige-store.workspace = true
vestige-config.workspace = true
vestige-embed.workspace = true
vestige-extract.workspace = true
vestige-engine.workspace = true
vestige-mcp.workspace = true
vestige-daemon.workspace = true
tokio = { workspace = true, features = ["net", "io-util"] }
clap.workspace = true
directories.workspace = true
libc = "0.2"
include_dir.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
ulid.workspace = true
ratatui = "0.30"

[features]
default = []
fastembed = ["vestige-embed/fastembed"]
ollama = ["vestige-embed/ollama"]
# Session-log extraction backends for `vestige scan` and the daemon (V0.5.4).
extract-ollama = ["vestige-extract/ollama", "vestige-engine/extract-ollama", "vestige-daemon/extract-ollama"]
extract-anthropic = ["vestige-extract/anthropic", "vestige-engine/extract-anthropic", "vestige-daemon/extract-anthropic"]
extract-openai = ["vestige-extract/openai", "vestige-engine/extract-openai", "vestige-daemon/extract-openai"]

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
toml.workspace = true
