[package]
name = "vestige-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
vestige-core.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
directories.workspace = true
ulid.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
