[package]
name = "vestige-config"
description = "Internal crate for Vestige — `.vestige/config.toml` round-trip and project identity resolution. Public API is unstable; use the `vestige` binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
vestige-core.workspace = true
vestige-embed.workspace = true
vestige-extract.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
directories.workspace = true
ulid.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
