[package]
name = "vestige-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
time.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
