[package]
name = "vestige-core"
description = "Internal crate for Vestige — pure domain types, memory engine, representation derivation, ranking. Public API is unstable; use the `vestige` binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
time.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
