[package]
name = "vestige-daemon"
description = "Internal crate for Vestige — background daemon runtime (V0.5). Public API is unstable; use the `vestige` binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
vestige-core.workspace = true
vestige-store.workspace = true
vestige-config.workspace = true
vestige-engine.workspace = true
vestige-embed.workspace = true
tokio = { workspace = true, features = ["signal", "net", "io-util", "time", "fs"] }
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
fs2 = "0.4"
directories.workspace = true
time = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
rusqlite.workspace = true
