[package]
name = "vestige-embed"
description = "Internal crate for Vestige — embedding provider abstraction. Deterministic fake provider always available; fastembed and ollama land in PR7 behind feature flags."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[features]
default = []
fastembed = ["dep:fastembed", "dep:directories"]
ollama = ["dep:reqwest"]

[dependencies]
vestige-core = { path = "../vestige-core" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
fastembed = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
directories = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
