[package]
name = "vestige-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
vestige-core.workspace = true
vestige-store.workspace = true
vestige-config.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rmcp.workspace = true
schemars.workspace = true
tokio.workspace = true
