[package]
name = "vestige-mcp"
description = "Internal crate for Vestige — MCP server adapter (rmcp 0.16, stdio transport). Public API is unstable; use the `vestige` binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
vestige-core.workspace = true
vestige-store.workspace = true
vestige-config.workspace = true
vestige-embed.workspace = true
vestige-engine.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rmcp.workspace = true
schemars.workspace = true
tokio.workspace = true
