[package]
name = "vestige-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
vestige-core.workspace = true
rusqlite.workspace = true
rusqlite_migration.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tracing.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile.workspace = true
