[package]
name = "vestige-store"
description = "Internal crate for Vestige — SQLite (bundled, FTS5) persistence layer. Public API is unstable; use the `vestige` binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
vestige-core.workspace = true
rusqlite.workspace = true
rusqlite_migration.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tracing.workspace = true
ulid.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
vestige-embed.workspace = true
